Updated repo details

--- a/report/sections/abstract.tex
+++ b/report/sections/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-As the drive for decentralized frameworks based on blockchains such as Bitcoin and Ethereum continues to grow, the need for reliable and accurate Smart Contracts is increasingly important. To this end, testing suites such as Mythril, Oyente, and SmartCheck have been produced that employ static analysis techniques such as symbolic and chain execution. These methods have been shown to vary wildly in which bugs they can detect, and studies have been made to demonstrate the number of bugs each can detect. However, there are minimal studies discussing the relevance of the bugs detected; which is vital when bugs such as the DAO bug can lead to over 60 million in damages. Thus we introduce a novel system for testing smart contracts with both Mythril and Oyente through a user-driven interface. This tool allows the user to specify what parts of the code are most important and emphasize which tests provide the most coverage over these regions. We used these tools to study the DAO Solidity scripts as well as 40 other scripts including \texttt{Honeypot.sol} and \texttt{BrokenToken.sol}. We found that Oyente consistently finds more bugs than Mythril, SmartCheck finds more bugs on smaller contracts, but Mythril finds the most relevant bugs and provides further insight into the source of these bugs. Moreover, the trend between code complexity and bugs is a bimodal trend where the smallest and largest scripts contain the most problems. Overall, we have shown this tool allows users to explore their smart contracts with more control using metrics truly relevant to their search for mistakes. 
+As the drive for decentralized frameworks based on blockchains such as Bitcoin and Ethereum continues to grow, the need for reliable and accurate Smart Contracts is increasingly important. To this end, testing suites such as Mythril, Oyente, and SmartCheck have been produced that employ static analysis techniques such as symbolic and chain execution. These methods have been shown to vary wildly in which bugs they can detect, and studies have been made to demonstrate the number of bugs each can detect. However, there are minimal studies discussing the relevance of the bugs detected; which is vital when bugs such as the DAO bug can lead to over 60 million in damages. Thus we introduce a novel system for testing smart contracts with Mythril, SmartCheck, and Oyente through a user-driven interface. This tool allows the user to specify what parts of the code are most important and emphasize which tests provide the most coverage over these regions. We used these tools to study the DAO Solidity scripts as well as 40 other scripts including \texttt{Honeypot.sol} and \texttt{BrokenToken.sol}. We found that Oyente consistently finds more bugs than Mythril, SmartCheck finds more bugs on smaller contracts, but Mythril finds the most relevant bugs and provides further insight into the source of these bugs. Moreover, the trend between code complexity and bugs is a bimodal trend where the smallest and largest scripts contain the most problems. Overall, we have shown this tool allows users to explore their smart contracts with more control using metrics truly relevant to their search for mistakes. 
 \end{abstract}
