--- a/report/sections/futureWork.tex
+++ b/report/sections/futureWork.tex
@@ -1,6 +1,6 @@
 \section{Future Work}
 
-Currently, our tool uses Oyente, Mythril, and SmartCheck to analyze Solidity smart contracts, then reports the bugs found within. These three give us the widest coverage while maintaining accuracy. This succeeds in allowing Solidity developers in an easy-to-use interface and gives a variety of results. We also allow developers to flag certain code snippets to be more important. We have also expanded on our previous experiments by running on a wider variety of smart contracts. Two notable large contracts here (King of the Ether and Cryptokitties) are over 1,000 lines long. \\
+Currently, our tool uses Oyente, Mythril, and SmartCheck to analyze Solidity smart contracts, then reports the bugs found within. These three give us the widest coverage while maintaining accuracy. This succeeds in allowing Solidity developers in an easy-to-use interface and gives a variety of results. We also allow developers to flag certain code snippets to be more important. We have also expanded on our previous experiments by running on a wider variety of smart contracts such as King of the Ether and Cryptokitties. \\
 
 Moving forward, we'd like to provide an easier method to allow updates for analyzers so they may easily adapt to future changes. Additionally, enabling developers to add their own testing suites would be useful as well. Since many smart contracts have similar crucial areas (e.g. authentication, external oracle, sending money, etc), perhaps we could recommend templates with secure design patterns to the developer depending on their code's errors. \\
 
