--- a/report/sections/related.tex
+++ b/report/sections/related.tex
@@ -6,9 +6,9 @@ The current smart contract static analysis tools employ a wide variety of techni
 
 Fontein studied each of these static analysis techniques in detail. In this study, he found that Oyente detects on average 75\% of the errors, but severely lacks in missed timestamp dependency bugs. Moreover, since Oyente relies on symbolic execution, a missed opportunity to provide an export of the script's control flow graph (CFG) could drastically improve it's effectiveness. Porosity's decompilation tools were shown to be very limited, and this tool only detects re-entrancy bugs. However, many of the re-entrancy bugs it detects are incorrect. Fontein defined Mythril as the clear winner as it detected the most bugs without false positives. However, Fontein did not mention the quality of the bugs, such as fixing the infamous DAO bug that cost almost 60 million in lost funds \cite{fontein2018comparison}. \\
 
-Even with this surge in tools, smart contracts filled with bugs are still be created. This is largely due to the lack of usability within each tool. With the huge opportunity for smart contracts in the financial sectors, many non-technical developers are creating contracts of their own \cite{tapscott2016blockchain}. However, these tools require knowledge of concepts such as EVM bytecode or symbolic execution. Thus, systems have been developed to provide user friendly interfaces to these tools. SmartCheck automatically checks contracts with code highlighting of errors. This tool allows users to run tools on their code with ease, but the analysis is limited by the tools in the backend of the code. Thus, user-driven studies are limited, and focusing analysis on important aspects is impossible \cite{smartcheck}. \\
+Even with this surge in tools, smart contracts filled with bugs are still being created. This is largely due to the lack of usability within each tool. With the huge opportunity for smart contracts in the financial sectors, many non-technical developers are creating contracts of their own \cite{tapscott2016blockchain}. However, these tools require knowledge of concepts such as EVM bytecode or symbolic execution. Thus, systems have been developed to provide user friendly interfaces to these tools. SmartCheck allows users to run tools on their website with ease, but the analysis is hidden from the user on their backend. Thus, user-driven studies are limited, and focusing analysis on important aspects is difficult \cite{smartcheck}. \\
 
-Thus, we explored these smart contract testing solutions, and validate these tools using novel metrics that consider the bugs unique to blockchain platforms and the security problems presented by these decentralized transactional events. Moreover, we developed a tool for comparing these testing suites on a specific codebase through user-driven studies. This tool combines visualizations of the bugs discovered by the testing suites, and explores developer driven metrics allowing specific blocks of code to be tagged with more importance. Thus, allowing developers to compare available testing options on their own codebase with metrics of far more meaning than generic code coverage. \\
+Thus, we explored these smart contract testing solutions, and validate these tools using novel metrics that consider the bugs unique to blockchain platforms and the security problems presented by these decentralized transactional events. Moreover, we developed a tool for comparing these testing suites on a specific codebase through user-driven studies. This tool combines results of the bugs discovered by the testing suites, and explores developer driven metrics allowing specific blocks of code to be tagged with more importance. This allows developers to compare available testing options on their own codebase with metrics of far more meaning than generic code coverage. With our tool, they have the ability to quickly see potential vulnerabilities in their code. \\
 
 
 
