--- a/report/sections/intro.tex
+++ b/report/sections/intro.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-Since Bitcoin was first introduced in 2009, decentralized transaction systems have surged in popularity in both the academic and private sectors \cite{nakamoto2008bitcoin}. To maintain decentralization, these systems rely on a consensus ledger maintained solely by the users, and thus no institution is required to maintain it. Blockchains were created as a way to handle the intricacies of a decentralized ledger system for transactions; however, today blockchains are used for much more. Miller et al. demonstrated a way to preserve data using blockchains by incentivizing users to store large volumes of data rather than provide large amount of computing power \cite{miller2014permacoin}, and use cases have been proposed to built entire operating systems from the blockchain structure \cite{factombos,tapscott2016blockchain}. However, with no central force governing these tools, new problems arise to handle secure and trusted transactions, data transfers, and events. \\
+Since Bitcoin was first introduced in 2009, decentralized transaction systems have surged in popularity in both the academic and private sectors \cite{nakamoto2008bitcoin}. To maintain decentralization, these systems rely on a consensus ledger maintained solely by the users, and thus no centralized institution is required to maintain it. Blockchains were created as a way to handle the intricacies of a decentralized ledger system for transactions; however, today blockchains are used for much more. Miller et al. demonstrated a way to preserve data using blockchains by incentivizing users to store large volumes of data rather than provide large amount of computing power \cite{miller2014permacoin}, and use cases have been proposed to built entire operating systems from the blockchain structure \cite{factombos,tapscott2016blockchain}. However, with no central force governing these tools, new problems arise when handling secure and trusted transactions, data transfers, and events. \\
 
 Thus, smart contracts were developed to provide a secure way to handle events in decentralized systems. A smart contract follows the success of Bitcoin's consensus ledger by providing a "consensus protocol" that a blockchain decides upon to guarantee any event between two entities is handled without third party intervention and results in costly penalties for any party found in breach of the contract \cite{szabo1997idea, luu2016making,daian2016dao}. These contracts can be used for transactions between two people, allow for digital identities, and facilitate data sharing. An example of a smart contract is shown in figure \ref{code:example}. In this example we have a basic script that sends money only if the condition \texttt{defined\_condition.is\_met()} succeeds. This condition can be any collection of jointly agreed upon requirements, and thus a wide array of contracts can be decentralized using smart contracts. \\
 
